--- a/viduhaytronglaptrinh.tat/public/css/base.css
+++ b/viduhaytronglaptrinh.tat/public/css/base.css
@@ -26,3 +26,13 @@ html {
     display: flex;
     flex-wrap: wrap;
 }
+
+/* Animation */
+@keyframes fadeIn {
+    form {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
