--- a/viduhaytronglaptrinh.tat/public/css/Login.css
+++ b/viduhaytronglaptrinh.tat/public/css/Login.css
@@ -4,6 +4,46 @@
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
 }
+div.load__page {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.3);
+    display: none;
+    z-index: 2;
+}.load_page-show {
+    display: block !important;
+}
+.ring {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 50px;
+    height: 50px;
+    margin-top: -30px;
+    margin-left: -30px;
+    border-radius: 100%;
+    border: 5px solid red;
+    border-right: 5px solid transparent;
+    animation: spinner 1s infinite ease-in-out;
+}
+@keyframes spinner {
+    to {
+        transform: rotate(360deg);
+    }
+}
+div.load__page {
+    position: fixed;
+    top: 0;
+    left: 0;
+    
+    width: 100vw;
+    height: 100vh;
+    background-color: red;
+    display: none;
+}
 section{
     position: relative;
     width: 100%;
@@ -164,4 +204,8 @@ section .noi-dung .form .icon-dang-nhap li i{
         margin: 30px 0 10px;
         font-weight: 500;
     }
+}
+
+.load_page-show {
+    display: block !important;
 }
