--- a/viduhaytronglaptrinh.tat/public/css/main.css
+++ b/viduhaytronglaptrinh.tat/public/css/main.css
@@ -75,18 +75,6 @@ body {
     background-color: #343a40;
     animation: fadeIn ;
 }
-.sidebar__profile-mobile {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-.sidebar__profile-mobile h3 {
-    color: #fff;
-    font-size: 3rem;
-    font-weight: bold;
-    padding: 20px;
-    margin-left: 10px;
-}
 .profile_img-mobile img{
     width: 150px;
     height: 150px;
@@ -96,6 +84,7 @@ body {
     display: flex;
     flex-direction: column;
     height: 200px;
+    margin-top: 40px;
 }
 .profile-mobile div {
     margin-top: 0;
@@ -129,7 +118,7 @@ body {
     position: absolute;
     top: 6.5em;
     width: 100%;
-    height: 40px;
+    height: 50px;
     border: 1px solid slategray;
     background-color: silver;
     display: flex;
@@ -137,21 +126,23 @@ body {
     display: none;
 }
 .input__mobile {
-    margin: 5px 2%;
+    margin: 10px 2%;
     width: 70%;
+    border-radius: 40px;
     font-weight: bold;
     font-size: 1.8rem;
 }
 .input__btn {
     width: 20%;
-    margin: 5px 2%;
+    margin: 10px 2%;
+    border-radius: 40px;
     background-color: #222;
     color: #fff;
     font-size: 1.8rem;
 }
 .lopphu {
     position: fixed;
-    top: calc(6.5rem + 40px);
+    top: calc(6.5rem + 50px);
     left: 0;
     bottom: 0;
     right: 0;
@@ -162,6 +153,9 @@ body {
 }
 #check-search:checked ~ .search-input__mobile {
     display: block;
+}
+.container__sidebar-mobile {
+    overflow-y: scroll;
 }
 /* kết thúc moblie */
 
@@ -181,11 +175,19 @@ body {
     font-size: 2rem;
 }
 .header__title {
+    display: flex;
 	margin-left: 1rem;
 	font-size: 3rem;
 	color: var(--white-color);
 	text-decoration: none;
-	font-weight: bold;
+}
+.header__title p {
+    color: #f00;
+    font-weight: bold;
+    font-size: 3.5rem;
+    display: block;
+    margin-top: -3px;
+    margin-left: 3px;
 }
 .header__search {
 	border: none;
@@ -309,8 +311,13 @@ body {
 }
 .container__sidebar-mobile .container__sidebar-menu .header__title {
     position: relative;
-    top: 20px;
-    left: 20px;
+    top: 25px;
+    margin: 10 auto;
+}
+.profile-mobile .header__title {
+    position: relative;
+    top: 30px;
+    margin: 0 auto;
 }
 .container__sidebar-info {
 	margin: 1rem;
@@ -345,7 +352,7 @@ body {
 }
 .container__sidebar-list p {
 	font-size: 2rem;
-	color: #b93632;
+	color: #f00;
 	margin: 1rem;
 	font-weight: bold;
 }
@@ -679,7 +686,7 @@ footer .footer__container .noi-dung.about p{
     
 }
 ::-webkit-scrollbar {
-    width: 15px;
+    width: 5px;
     background-color: silver;
 }
 ::-webkit-scrollbar-thumb {
