--- a/viduhaytronglaptrinh.tat/public/css/Login.css
+++ b/viduhaytronglaptrinh.tat/public/css/Login.css
@@ -29,6 +29,29 @@ div.load__page {
     border-right: 5px solid transparent;
     animation: spinner 1s infinite ease-in-out;
 }
+.show__messenger {
+    padding: 50px 20px;
+    font-size: 20px;
+    font-weight: bold;
+    background-color: #343a40;
+    color: red;
+}
+.btn_ok {
+    width: 80px;
+    height: 40px;
+    position: absolute;
+    left: 50%;
+    bottom: 20px;
+    transform: translateX(-50%);
+    text-decoration: none;
+	background: #530ad4;
+	cursor: pointer;
+	border: none;
+	color: #fff;
+	box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
+	border-radius: 2px;
+	padding: 8px 24px;
+}
 @keyframes spinner {
     to {
         transform: rotate(360deg);
