--- a/viduhaytronglaptrinh.tat/public/css/postDetail.css
+++ b/viduhaytronglaptrinh.tat/public/css/postDetail.css
@@ -162,6 +162,18 @@
 .comment__report button:hover {
   background-color: sandybrown;
 }
+.comment__report .btn_delete_post {
+  color: red;
+  border-radius: 30px;
+  background-color: transparent;
+  border: none;
+  padding: 5px 10px;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+.comment__report .btn_delete_post:hover {
+  background-color: rgb(248, 136, 136);
+}
 .next-page {
   /* border-radius: 20px; */
   margin-bottom: 10px;
